src/quicktemplates2/qquickshortcutcontext.cpp
@@ -40,6 +40,7 @@
 #include "qquickpopup_p.h"
 
 #include <QtGui/qguiapplication.h>
+#include <QtQuick/qquickrendercontrol.h>
 
 QT_BEGIN_NAMESPACE
 
@@ -77,6 +78,8 @@ bool QQuickShortcutContext::matcher(QObject *obj, Qt::ShortcutContext context)
                 item = popup->popupItem();
             }
         }
+        if (QWindow *renderWindow = QQuickRenderControl::renderWindowFor(qobject_cast<QQuickWindow *>(obj)))
+            obj = renderWindow;
         return obj && obj == QGuiApplication::focusWindow() && !isBlockedByPopup(item);
     default:
         return false;
